<resources>
    <plurals name="days_count">
        <item quantity="one">%1$d день</item>
        <item quantity="two">%1$d дня</item>
        <item quantity="few">%1$d дня</item>
        <item quantity="many">%1$d дней</item>
        <item quantity="other">%1$d дней</item>
    </plurals>

    <string name="app_name">ProjectPurpose</string>
    <string name="no_items">Вы еще не записали ни одной цели</string>
    <string name="purposes">Цели</string>
    <string name="archive_purposes">Архив целей</string>
    <string name="done_purposes">Выполненные цели</string>
    <string name="expired_purposes">Просроченные цели</string>
    <string name="choose_date">Выбрать дату</string>
    <string name="button_done">Готово</string>
    <string name="purpose_hint">Цель</string>
    <string name="when_hint">Когда?</string>
    <string name="edit_purpose">Редактирование цели</string>
    <string name="new_purpose">Добавление цели</string>
    <string name="date_pick">Дата цели:</string>
    <string name="delete_purpose">Удалить</string>
    <string name="edit_purpose_menu">Редактировать</string>
    <string name="share_purpose_message">Хочу поделиться своей целью! %1$s до %2$s</string>
    <string name="share_done_purpose_message">Выполнил свою цель! %1$s до %2$s</string>
    <string name="share_purpose">Поделиться</string>
    <string name="photo_hint">Фото</string>
    <string name="take_photo">Выбрать фото</string>
    <string name="days_after">дней \nпрошло</string>
    <string name="purposes_list_title">BE THE HARDEST WORKER IN THE ROOM</string>
    <string name="actions_plan_text">План действий</string>
    <string name="time_end_text">Время вышло</string>
    <string name="time_end_text_widget">Время \nвышло</string>
    <string name="days_left_text">Осталось %s</string>
    <string name="toast_didnt_enter_goal_name">Вы не вввели название цели</string>
    <string name="toast_didnt_enter_date">Вы не выбрали дату цели</string>
    <string name="change_image_text">Изменить фото</string>
    <string name="theme_text">Тема</string>
    <string name="edit_theme_text">Редактировать тему</string>
    <string name="alpha_text">Непрозрачность</string>
    <string name="actions_plan_title">План действий</string>
    <string name="motivation_title">Мотивация</string>
    <string name="notes_title">Заметки</string>
    <string name="actions_plan_hint">Напишите примерный план действий, например каждый день заниматься в зале или посетить какие-нибудь курсы.</string>
    <string name="motivation_hint">Напишите, почему вам очень важно достичь этой цели, в тяжелые моменты это может помочь вам не опустить руки. </string>
    <string name="notes_hint">Тут можно написать любые примечания.</string>
    <string name="white_font_text">Белый шрифт</string>

    <string name="add_in_calendar_text">Добавить в календарь</string>
    <string name="reports_title">Отчеты</string>
    <string name="tasks_title">Задачи</string>
    <string name="write_report_text">Написать отчет</string>
    <string name="what_did_good_text">Что было сделано хорошо?</string>
    <string name="what_could_better_text">Что можно было сделать лучше?</string>
    <string name="edit_report_dialog_title">Редактирование отчета</string>
    <string name="create_report_dialog_title">Добавление отчета</string>
    <string name="report_name_text">Название</string>
    <string name="report_description_text">Описание</string>
    <string name="check_done_text">Отметить выполненным</string>
    <string name="uncheck_done_text">Отметить не выполненным</string>
    <string name="purposes_menu_item_text">Цели</string>
    <string name="done_purposes_menu_item_text">Архив</string>
    <string name="setting_menu_item_text">Настройки</string>
    <string name="setting_title_text">Настройки</string>
    <string name="no_done_purposes_text">У вас еще нет выполненных целей</string>
    <string name="notification_report_title">Project Purpose</string>
    <string name="notification_report_text">Не забудьте написать сегодняшний отчет</string>
    <string name="item_notification_text">Напоминание</string>
    <string name="dialog_ok_text">ОК</string>
    <string name="dialog_cancel_text">Отмена</string>
    <string name="time_notification_text">%02d:%02d</string>
    <string name="delete_purpose_confirm">Вы действительно хотите удалить цель?</string>
    <string name="text_days_static">дней</string>
    <string name="toast_copied">Отчет скопирован</string>
    <string name="clipboard_title">Отчет</string>
    <string name="notification_summary_text">Ежедневное напоминание о написании отчета</string>
    <string name="choose_purpose_text">Выберите цель</string>
    <string name="item_developer_info_text">Информация о разработчике</string>
    <string name="show_expired_purposes">Показать просроченные цели</string>
    <string name="hide_expired_purposes">Скрыть просроченные цели</string>
    <string name="new_task_text">Новая задача</string>
    <string name="show_done_tasks">Показать выполненные задачи</string>
    <string name="hide_done_tasks">Скрыть выполненные задачи</string>
    <string name="delete_note_text">Удалить заметку</string>
    <string name="new_note_text">Новая заметка</string>
    <string name="note_title_hint">Название</string>
    <string name="note_body_hint">Текст</string>

</resources>
