<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/report_name_text"
        android:inputType="textCapSentences" />
    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/report_description_text"
        android:inputType="textCapSentences"/>
    <EditText
        android:id="@+id/edit_text_did_good"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/what_did_good_text"
        android:inputType="textCapSentences"/>
    <EditText
        android:id="@+id/edit_text_could_better"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/what_could_better_text"
        android:inputType="textCapSentences"/>
</LinearLayout>