<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:title="@string/new_purpose"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:id="@+id/purpose_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_gray" />

        <EditText
            android:id="@+id/list_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/purpose_hint"
            android:maxLength="80"
            android:inputType="textCapSentences"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ededed" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/date_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_event"
            android:layout_centerVertical="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/when_hint"
            android:layout_toEndOf="@id/date_image"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_centerVertical="true" />

        <Button
            android:id="@+id/choose_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorForeign"
            android:textSize="14sp"
            android:text="@string/choose_date"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ededed" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/photo_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_photo"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo_hint"
            android:layout_toEndOf="@id/photo_image"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_centerVertical="true" />

        <Button
            android:id="@+id/take_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorForeign"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:textSize="14sp"
            android:text="@string/take_photo"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ededed" />

    <Button
        android:id="@+id/button_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/button_done"
        android:background="@drawable/solid_button"
        android:textColor="@android:color/white"
        android:layout_gravity="end" />
</LinearLayout>