<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/text_view_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_title_text"
        android:textSize="32sp"
        android:textColor="@android:color/white"
        android:layout_margin="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/notification_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/item_notification_text"
        android:textSize="16sp"
        android:layout_margin="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_settings" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/notification_summary_text_view"
        app:layout_constraintTop_toBottomOf="@id/notification_title_text_view"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/notification_summary_text"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@id/time_notification_text_view" />
    <TextView
        android:id="@+id/time_notification_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/notifications_switch"
        app:layout_constraintEnd_toStartOf="@id/notifications_switch"
        android:text="21:00"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@id/notifications_switch" />

    <Switch
        android:id="@+id/notifications_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/notification_title_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/notification_summary_text_view"
        android:layout_margin="16dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

</androidx.constraintlayout.widget.ConstraintLayout>