<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorPrimaryDark"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/color_background"
            app:expandedTitleMarginStart="10dp"
            app:layout_scrollFlags="scroll|snap"
            app:title=" ">

            <ImageView
                android:id="@+id/toolbar_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/title_background"
                app:layout_collapseMode="parallax" />

            <TextView
                android:id="@+id/purpose_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/archive_purposes"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@color/color_background"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/text_view_done_purposes_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/done_purposes"
                android:textSize="24sp"
                android:textColor="@color/color_text"
                android:layout_margin="16dp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"/>

            <FrameLayout
                android:id="@+id/frame_layout_completed_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/text_view_done_purposes_title">
                <TextView
                    android:id="@+id/no_items"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/no_done_purposes_text"
                    android:textColor="@android:color/darker_gray"
                    android:visibility="invisible"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/completed_purposes_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"/>
            </FrameLayout>

            <TextView
                android:id="@+id/show_expired_purposes_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text"
                android:text="@string/show_expired_purposes"
                android:textSize="16sp"
                android:layout_margin="16dp"
                android:visibility="invisible"
                android:textStyle="bold"
                android:drawableLeft="@drawable/arrow_show"
                app:layout_constraintTop_toBottomOf="@id/frame_layout_completed_list"
                app:layout_constraintStart_toStartOf="parent"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/expired_purposes_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/show_expired_purposes_text_view"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>