<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="8dp"
        android:layout_margin="8dp">

        <CalendarView
            android:id="@+id/calendar_view_reports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_write_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/solid_button"
        android:padding="20dp"
        android:text="@string/write_report_text"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view_calendar"
        android:visibility="invisible" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_view_calendar"
        android:visibility="visible"
        app:cardCornerRadius="8dp"
        android:layout_margin="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/text_view_report_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Добавил немного clean и начал писать отчеты"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/copy_report_image_button"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/text_view_report_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_report_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                tools:text="Занимался целый день, пытался добавить clean в проект, но постоянно возникали трудности, начал пилить отчеты" />

            <TextView
                android:id="@+id/what_did_good_static_text"
                android:layout_width="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_report_body"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:textStyle="italic"
                android:text="@string/what_did_good_text" />

            <TextView
                android:id="@+id/what_did_good_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/what_did_good_static_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                tools:text="Много времени занимался,немного улучшил структуру, решил баги с сохранением состояния фрагментов, начал делать отчеты" />

            <TextView
                android:id="@+id/what_could_better_static_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/what_did_good_text_view"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:textStyle="italic"
                android:text="@string/what_could_better_text" />

            <TextView
                android:id="@+id/what_could_better_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/what_could_better_static_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="Придумать дизайн кнопок получше, разобраться до конца с проектом currencyConverter" />

            <ImageButton
                android:id="@+id/copy_report_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_copy_gray"
                android:background="?selectableItemBackgroundBorderless"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@id/edit_image_button" />

            <ImageButton
                android:id="@+id/edit_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit_gray"
                android:background="?selectableItemBackgroundBorderless"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        app:layout_constraintTop_toBottomOf="@id/card_view_report" />

</androidx.constraintlayout.widget.ConstraintLayout>
